--- a/Doc/Input/Ack.tex
+++ b/Doc/Input/Ack.tex
@@ -1,4 +1,6 @@
 
+The authors would like to thank Christopher J. Geoga for early work on the codes to
+produce Cartesian tapers. 
 Comments by David J. Thomson and Alan Chave on the statistical aspects of
 multitaper spectrum estimation also contributed greatly to this work. 
 
