--- a/Doc/Outline/Outline.tex
+++ b/Doc/Outline/Outline.tex
@@ -17,7 +17,11 @@
 
 \begin{enumerate}
   
-  \item 
+  \item Windowing functions for the Xray data
+
+  \item The 2D missing data problem for spectrum analysis. Is there a simple solution
+when the domain is rectangular? (No, because why are we solving this kernel thing
+using numerical integration with GL grid points?) 
 
 \end{enumerate}
 
