--- a/Doc/main.tex
+++ b/Doc/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{amsart}
+\ documentclass[11pt]{amsart}
 \usepackage{geometry}                % See geometry.pdf to learn the layout options. There are lots.
 \geometry{letterpaper}                   % ... or a4paper or a5paper or ... 
 %\geometry{landscape}                % Activate for for rotated page geometry
@@ -8,15 +8,19 @@
 \usepackage{epstopdf}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
-\title{Cartesian Slepian Functions on Aribitrary Domains}
+\title{Multidimensional Concentrated Functions on Cartesian Domains}
 \author{CLH}
 %\date{}                                           % Activate to display a given date or no date
 
+\input{Input/preamble}
+\input{Input/macros}
+
 \begin{document}
 \maketitle
-%\section{}
-%\subsection{}
 
+\input{Input/xray}
 
+\bibliography{../../../Collected.bib,Bibliography/slepians.bib}
+\bibliographystyle{plain}
 
 \end{document}  
