--- a/Code/Cartesian_Slepians.ipynb
+++ b/Code/Cartesian_Slepians.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83fb1365",
+   "id": "701ae085",
    "metadata": {},
    "source": [
     "# Cartesian Slepian Sequences\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "37ba5daa",
+   "id": "682968a5",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa98eec",
+   "id": "57e7bada",
    "metadata": {},
    "source": [
     "## Example 1: Rectangular support in space\n",
@@ -68,139 +68,67 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "275f8a16",
+   "id": "c8970f81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s, sleps = customsleps(5, 10.0, (16, 16, 16), int = (32, 35, 36), maxrank=256, exact = true);"
+    "M = 5\n",
+    "Kp = [10.0]\n",
+    "szs = (16,16,16)\n",
+    "int = (32, 35, 36)\n",
+    "maxrank = 256\n",
+    "exact = true\n",
+    "no = nothing\n",
+    "sqwt = nothing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3d5d8872",
+   "id": "b985bb76",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16×16×16 Array{Complex{Float64},3}:\n",
-       "[:, :, 1] =\n",
-       "   0.0161996+0.0im    0.0284099+0.0im  …   -0.0161996+0.0im\n",
-       "   0.0284099+0.0im    0.0292055+0.0im      -0.0284099+0.0im\n",
-       "   0.0237879+0.0im  -0.00178198+0.0im      -0.0237879+0.0im\n",
-       "  0.00688688+0.0im   -0.0411678+0.0im     -0.00688688+0.0im\n",
-       " -0.00978613+0.0im   -0.0639165+0.0im      0.00978613+0.0im\n",
-       "  -0.0174602+0.0im   -0.0621573+0.0im  …    0.0174602+0.0im\n",
-       "  -0.0149658+0.0im   -0.0426316+0.0im       0.0149658+0.0im\n",
-       " -0.00573248+0.0im   -0.0148974+0.0im      0.00573248+0.0im\n",
-       "  0.00573248+0.0im    0.0148974+0.0im     -0.00573248+0.0im\n",
-       "   0.0149658+0.0im    0.0426316+0.0im      -0.0149658+0.0im\n",
-       "   0.0174602+0.0im    0.0621573+0.0im  …   -0.0174602+0.0im\n",
-       "  0.00978613+0.0im    0.0639165+0.0im     -0.00978613+0.0im\n",
-       " -0.00688688+0.0im    0.0411678+0.0im      0.00688688+0.0im\n",
-       "  -0.0237879+0.0im   0.00178198+0.0im       0.0237879+0.0im\n",
-       "  -0.0284099+0.0im   -0.0292055+0.0im       0.0284099+0.0im\n",
-       "  -0.0161996+0.0im   -0.0284099+0.0im  …    0.0161996+0.0im\n",
-       "\n",
-       "[:, :, 2] =\n",
-       "   0.0284099+0.0im   0.0292055+0.0im  …  -0.0292055+0.0im   -0.0284099+0.0im\n",
-       "   0.0292055+0.0im  -0.0168142+0.0im      0.0168142+0.0im   -0.0292055+0.0im\n",
-       " -0.00178198+0.0im   -0.103578+0.0im       0.103578+0.0im   0.00178198+0.0im\n",
-       "  -0.0411678+0.0im   -0.166796+0.0im       0.166796+0.0im    0.0411678+0.0im\n",
-       "  -0.0639165+0.0im    -0.17081+0.0im        0.17081+0.0im    0.0639165+0.0im\n",
-       "  -0.0621573+0.0im   -0.128487+0.0im  …    0.128487+0.0im    0.0621573+0.0im\n",
-       "  -0.0426316+0.0im  -0.0725594+0.0im      0.0725594+0.0im    0.0426316+0.0im\n",
-       "  -0.0148974+0.0im  -0.0225757+0.0im      0.0225757+0.0im    0.0148974+0.0im\n",
-       "   0.0148974+0.0im   0.0225757+0.0im     -0.0225757+0.0im   -0.0148974+0.0im\n",
-       "   0.0426316+0.0im   0.0725594+0.0im     -0.0725594+0.0im   -0.0426316+0.0im\n",
-       "   0.0621573+0.0im    0.128487+0.0im  …   -0.128487+0.0im   -0.0621573+0.0im\n",
-       "   0.0639165+0.0im     0.17081+0.0im       -0.17081+0.0im   -0.0639165+0.0im\n",
-       "   0.0411678+0.0im    0.166796+0.0im      -0.166796+0.0im   -0.0411678+0.0im\n",
-       "  0.00178198+0.0im    0.103578+0.0im      -0.103578+0.0im  -0.00178198+0.0im\n",
-       "  -0.0292055+0.0im   0.0168142+0.0im     -0.0168142+0.0im    0.0292055+0.0im\n",
-       "  -0.0284099+0.0im  -0.0292055+0.0im  …   0.0292055+0.0im    0.0284099+0.0im\n",
-       "\n",
-       "[:, :, 3] =\n",
-       "   0.0237879+0.0im  -0.00178198+0.0im  -0.0568733+0.0im  …   -0.0237879+0.0im\n",
-       " -0.00178198+0.0im    -0.103578+0.0im   -0.214908+0.0im      0.00178198+0.0im\n",
-       "  -0.0568733+0.0im    -0.214908+0.0im   -0.309796+0.0im       0.0568733+0.0im\n",
-       "  -0.0993872+0.0im    -0.246094+0.0im   -0.245217+0.0im       0.0993872+0.0im\n",
-       "   -0.105108+0.0im    -0.185596+0.0im  -0.0743155+0.0im        0.105108+0.0im\n",
-       "  -0.0811728+0.0im   -0.0923226+0.0im   0.0712316+0.0im  …    0.0811728+0.0im\n",
-       "  -0.0472418+0.0im   -0.0262863+0.0im    0.108729+0.0im       0.0472418+0.0im\n",
-       "  -0.0150639+0.0im  -0.00262448+0.0im    0.048285+0.0im       0.0150639+0.0im\n",
-       "   0.0150639+0.0im   0.00262448+0.0im   -0.048285+0.0im      -0.0150639+0.0im\n",
-       "   0.0472418+0.0im    0.0262863+0.0im   -0.108729+0.0im      -0.0472418+0.0im\n",
-       "   0.0811728+0.0im    0.0923226+0.0im  -0.0712316+0.0im  …   -0.0811728+0.0im\n",
-       "    0.105108+0.0im     0.185596+0.0im   0.0743155+0.0im       -0.105108+0.0im\n",
-       "   0.0993872+0.0im     0.246094+0.0im    0.245217+0.0im      -0.0993872+0.0im\n",
-       "   0.0568733+0.0im     0.214908+0.0im    0.309796+0.0im      -0.0568733+0.0im\n",
-       "  0.00178198+0.0im     0.103578+0.0im    0.214908+0.0im     -0.00178198+0.0im\n",
-       "  -0.0237879+0.0im   0.00178198+0.0im   0.0568733+0.0im  …    0.0237879+0.0im\n",
-       "\n",
-       "...\n",
-       "\n",
-       "[:, :, 14] =\n",
-       "  -0.0237879+0.0im   0.00178198+0.0im   0.0568733+0.0im  …    0.0237879+0.0im\n",
-       "  0.00178198+0.0im     0.103578+0.0im    0.214908+0.0im     -0.00178198+0.0im\n",
-       "   0.0568733+0.0im     0.214908+0.0im    0.309796+0.0im      -0.0568733+0.0im\n",
-       "   0.0993872+0.0im     0.246094+0.0im    0.245217+0.0im      -0.0993872+0.0im\n",
-       "    0.105108+0.0im     0.185596+0.0im   0.0743155+0.0im       -0.105108+0.0im\n",
-       "   0.0811728+0.0im    0.0923226+0.0im  -0.0712316+0.0im  …   -0.0811728+0.0im\n",
-       "   0.0472418+0.0im    0.0262863+0.0im   -0.108729+0.0im      -0.0472418+0.0im\n",
-       "   0.0150639+0.0im   0.00262448+0.0im   -0.048285+0.0im      -0.0150639+0.0im\n",
-       "  -0.0150639+0.0im  -0.00262448+0.0im    0.048285+0.0im       0.0150639+0.0im\n",
-       "  -0.0472418+0.0im   -0.0262863+0.0im    0.108729+0.0im       0.0472418+0.0im\n",
-       "  -0.0811728+0.0im   -0.0923226+0.0im   0.0712316+0.0im  …    0.0811728+0.0im\n",
-       "   -0.105108+0.0im    -0.185596+0.0im  -0.0743155+0.0im        0.105108+0.0im\n",
-       "  -0.0993872+0.0im    -0.246094+0.0im   -0.245217+0.0im       0.0993872+0.0im\n",
-       "  -0.0568733+0.0im    -0.214908+0.0im   -0.309796+0.0im       0.0568733+0.0im\n",
-       " -0.00178198+0.0im    -0.103578+0.0im   -0.214908+0.0im      0.00178198+0.0im\n",
-       "   0.0237879+0.0im  -0.00178198+0.0im  -0.0568733+0.0im  …   -0.0237879+0.0im\n",
-       "\n",
-       "[:, :, 15] =\n",
-       "  -0.0284099+0.0im  -0.0292055+0.0im  …   0.0292055+0.0im    0.0284099+0.0im\n",
-       "  -0.0292055+0.0im   0.0168142+0.0im     -0.0168142+0.0im    0.0292055+0.0im\n",
-       "  0.00178198+0.0im    0.103578+0.0im      -0.103578+0.0im  -0.00178198+0.0im\n",
-       "   0.0411678+0.0im    0.166796+0.0im      -0.166796+0.0im   -0.0411678+0.0im\n",
-       "   0.0639165+0.0im     0.17081+0.0im       -0.17081+0.0im   -0.0639165+0.0im\n",
-       "   0.0621573+0.0im    0.128487+0.0im  …   -0.128487+0.0im   -0.0621573+0.0im\n",
-       "   0.0426316+0.0im   0.0725594+0.0im     -0.0725594+0.0im   -0.0426316+0.0im\n",
-       "   0.0148974+0.0im   0.0225757+0.0im     -0.0225757+0.0im   -0.0148974+0.0im\n",
-       "  -0.0148974+0.0im  -0.0225757+0.0im      0.0225757+0.0im    0.0148974+0.0im\n",
-       "  -0.0426316+0.0im  -0.0725594+0.0im      0.0725594+0.0im    0.0426316+0.0im\n",
-       "  -0.0621573+0.0im   -0.128487+0.0im  …    0.128487+0.0im    0.0621573+0.0im\n",
-       "  -0.0639165+0.0im    -0.17081+0.0im        0.17081+0.0im    0.0639165+0.0im\n",
-       "  -0.0411678+0.0im   -0.166796+0.0im       0.166796+0.0im    0.0411678+0.0im\n",
-       " -0.00178198+0.0im   -0.103578+0.0im       0.103578+0.0im   0.00178198+0.0im\n",
-       "   0.0292055+0.0im  -0.0168142+0.0im      0.0168142+0.0im   -0.0292055+0.0im\n",
-       "   0.0284099+0.0im   0.0292055+0.0im  …  -0.0292055+0.0im   -0.0284099+0.0im\n",
-       "\n",
-       "[:, :, 16] =\n",
-       "  -0.0161996+0.0im   -0.0284099+0.0im  …    0.0161996+0.0im\n",
-       "  -0.0284099+0.0im   -0.0292055+0.0im       0.0284099+0.0im\n",
-       "  -0.0237879+0.0im   0.00178198+0.0im       0.0237879+0.0im\n",
-       " -0.00688688+0.0im    0.0411678+0.0im      0.00688688+0.0im\n",
-       "  0.00978613+0.0im    0.0639165+0.0im     -0.00978613+0.0im\n",
-       "   0.0174602+0.0im    0.0621573+0.0im  …   -0.0174602+0.0im\n",
-       "   0.0149658+0.0im    0.0426316+0.0im      -0.0149658+0.0im\n",
-       "  0.00573248+0.0im    0.0148974+0.0im     -0.00573248+0.0im\n",
-       " -0.00573248+0.0im   -0.0148974+0.0im      0.00573248+0.0im\n",
-       "  -0.0149658+0.0im   -0.0426316+0.0im       0.0149658+0.0im\n",
-       "  -0.0174602+0.0im   -0.0621573+0.0im  …    0.0174602+0.0im\n",
-       " -0.00978613+0.0im   -0.0639165+0.0im      0.00978613+0.0im\n",
-       "  0.00688688+0.0im   -0.0411678+0.0im     -0.00688688+0.0im\n",
-       "   0.0237879+0.0im  -0.00178198+0.0im      -0.0237879+0.0im\n",
-       "   0.0284099+0.0im    0.0292055+0.0im      -0.0284099+0.0im\n",
-       "   0.0161996+0.0im    0.0284099+0.0im  …   -0.0161996+0.0im"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#=\n",
+    "nowtv = getnodeswts(szs)\n",
+    "\n",
+    "# Re-format the above nodes and weights under a single index:\n",
+    "no    = vec(collect(IterTools.product([x[1] for x in nowtv]...)))\n",
+    "sqwt  = givewts(nowtv)\n",
+    "# Create the kernel matrix, exactly or via HODLR approximation:\n",
+    "_K    = KernelMatrix(no, no, Kp, dfn)\n",
+    "K     = exact ? full(_K) : RHMatrix.rhodlr(_K, lvl, prec, maxrank)\n",
+    "\n",
+    "# Solve the eigenvalue problem (86) to obtain the slepians at the quad nodes:\n",
+    "s     = eigsolve(z->sqwt.*(K*(sqwt.*z)), prod(szs), M, :LM, issymmetric=true)\n",
+    "\n",
+    "outputsize = (int == nothing) ? szs : int\n",
+    "# Prepare even grid points, compute Slepians at those points:\n",
+    "evpts = vec(collect(product([range(-1.0, 1.0, length=s) for s in outputsize]...)))\n",
+    "_K2   = KernelMatrix(evpts, no, Kp, dfn)\n",
+    "K2    = exact ? full(_K2) : RHMatrix.rhodlr(_K2, lvl, prec, maxrank)\n",
+    "sleps = [(K2*(sqwt.*x[2]))./x[1] for x in zip(s[1], s[2])]\n",
+    "\n",
+    "res = s[1], [reshape(sp, outputsize...) for sp in sleps]\n",
+    "=#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eec1db7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s, sleps = customsleps(M, Kp, szs, int = int, maxrank=maxrank, exact = exact);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64541157",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sleps[1]"
    ]
@@ -208,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "846bc902",
+   "id": "e598b180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "894c0c66",
+   "id": "96d3b14f",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f0affb7",
+   "id": "ffd5f582",
    "metadata": {},
    "source": [
     "## Example 1a: Rectangular support, but with more quadrature nodes"
@@ -1126,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "494df708",
+   "id": "8c76b367",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "39c15de6",
+   "id": "f2f771a8",
    "metadata": {},
    "outputs": [
     {
@@ -3064,7 +2992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e772af6",
+   "id": "e56b46e4",
    "metadata": {},
    "source": [
     "## Example 2 - Convex region in space\n",
@@ -3075,7 +3003,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7b199879",
+   "id": "2135c7ed",
    "metadata": {},
    "outputs": [
     {
@@ -3136,7 +3064,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ebdb0d7e",
+   "id": "a47f0018",
    "metadata": {},
    "outputs": [
     {
@@ -3775,7 +3703,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "922dd618",
+   "id": "7724c80a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3785,7 +3713,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4afe743d",
+   "id": "a8b17731",
    "metadata": {},
    "outputs": [
     {
@@ -4791,7 +4719,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9f652193",
+   "id": "0794b2bb",
    "metadata": {},
    "outputs": [
     {
@@ -5682,7 +5610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9de903c",
+   "id": "329aee80",
    "metadata": {},
    "source": [
     "## 3D Octagonal Prism\n",
@@ -5693,7 +5621,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ab23e060",
+   "id": "45f54fbd",
    "metadata": {},
    "outputs": [
     {
@@ -5745,7 +5673,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "72b22aab",
+   "id": "35fb5347",
    "metadata": {},
    "outputs": [
     {
@@ -9972,7 +9900,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a1fb3c5f",
+   "id": "954aadbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9983,7 +9911,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5990dd56",
+   "id": "530ae479",
    "metadata": {},
    "outputs": [
     {
@@ -10848,7 +10776,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7e8767f2",
+   "id": "95c36660",
    "metadata": {},
    "outputs": [
     {
@@ -11638,7 +11566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe11652",
+   "id": "dc0cf89c",
    "metadata": {},
    "source": [
     "# Conclusion\n",
