add d-dimensional slepian code

--- a/Examples/Cartesian_Slepians.ipynb
+++ b/Examples/Cartesian_Slepians.ipynb
@@ -55,14 +55,7 @@
    ],
    "source": [
     "using KernelMatrices, FastGaussQuadrature, IterTools, SpecialFunctions, LinearAlgebra, KrylovKit\n",
-    "using Plots, FFTW\n",
-    "\n",
-    "# Connecting module so as to effectively compute the kernel matrix\n",
-    "include(\"RHMatrix.jl\")\n",
-    "using .RHMatrix\n",
-    "\n",
-    "# This function implements the procedure outlined above for solving the Fredholm integral equation numerically\n",
-    "include(\"Slepians.jl\")"
+    "using Plots, FFTW, Slepians"
    ]
   },
   {
@@ -90,37 +83,6 @@
     "exact = true\n",
     "no = nothing\n",
     "sqwt = nothing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7aef67ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#=\n",
-    "nowtv = getnodeswts(szs)\n",
-    "\n",
-    "# Re-format the above nodes and weights under a single index:\n",
-    "no    = vec(collect(IterTools.product([x[1] for x in nowtv]...)))\n",
-    "sqwt  = givewts(nowtv)\n",
-    "# Create the kernel matrix, exactly or via HODLR approximation:\n",
-    "_K    = KernelMatrix(no, no, Kp, dfn)\n",
-    "K     = exact ? full(_K) : RHMatrix.rhodlr(_K, lvl, prec, maxrank)\n",
-    "\n",
-    "# Solve the eigenvalue problem (86) to obtain the slepians at the quad nodes:\n",
-    "s     = eigsolve(z->sqwt.*(K*(sqwt.*z)), prod(szs), M, :LM, issymmetric=true)\n",
-    "\n",
-    "outputsize = (int == nothing) ? szs : int\n",
-    "# Prepare even grid points, compute Slepians at those points:\n",
-    "evpts = vec(collect(product([range(-1.0, 1.0, length=s) for s in outputsize]...)))\n",
-    "_K2   = KernelMatrix(evpts, no, Kp, dfn)\n",
-    "K2    = exact ? full(_K2) : RHMatrix.rhodlr(_K2, lvl, prec, maxrank)\n",
-    "sleps = [(K2*(sqwt.*x[2]))./x[1] for x in zip(s[1], s[2])]\n",
-    "\n",
-    "res = s[1], [reshape(sp, outputsize...) for sp in sleps]\n",
-    "=#"
    ]
   },
   {
