for automerging into registry

--- a/Examples/Cartesian_Slepians.ipynb
+++ b/Examples/Cartesian_Slepians.ipynb
@@ -28,10 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "fc672046",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Slepians [97caf2bd-9cc0-4738-8821-c8999f46f3c9]\n",
+      "└ @ Base loading.jl:1278\n"
+     ]
+    }
+   ],
    "source": [
     "#using KernelMatrices, IterTools, SpecialFunctions, LinearAlgebra, KrylovKit\n",
     "using Plots, FFTW, Slepians, FastGaussQuadrature"
