--- a/Examples/gpss_vs_dDimSleps.ipynb
+++ b/Examples/gpss_vs_dDimSleps.ipynb
@@ -11,7 +11,13 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Precompiling Slepians [97caf2bd-9cc0-4738-8821-c8999f46f3c9]\n",
-      "└ @ Base loading.jl:1278\n"
+      "└ @ Base loading.jl:1278\n",
+      "┌ Warning: Package Slepians does not have KernelMatrices in its dependencies:\n",
+      "│ - If you have Slepians checked out for development and have\n",
+      "│   added KernelMatrices as a dependency but haven't updated your primary\n",
+      "│   environment's manifest file, try `Pkg.resolve()`.\n",
+      "│ - Otherwise you may need to report an issue with Slepians\n",
+      "└ Loading KernelMatrices into Slepians from project dependency, future warnings for Slepians are suppressed.\n"
      ]
     }
    ],
@@ -33,8 +39,8 @@
       "\u001b[91mUndefVarError: mean not defined\u001b[39m",
       "",
       "Stacktrace:",
-      " [1] gpss(::Float64, ::Int64, ::Array{Float64,1}, ::Float64; beta::Float64) at /Users/charlottehaley/.julia/packages/Slepians/k9fqG/src/gpss.jl:65",
-      " [2] gpss(::Float64, ::Int64, ::Array{Float64,1}, ::Float64) at /Users/charlottehaley/.julia/packages/Slepians/k9fqG/src/gpss.jl:44",
+      " [1] gpss(::Float64, ::Int64, ::Array{Float64,1}, ::Float64; beta::Float64) at /Users/charlottehaley/.julia/packages/Slepians/BIgzj/src/gpss.jl:65",
+      " [2] gpss(::Float64, ::Int64, ::Array{Float64,1}, ::Float64) at /Users/charlottehaley/.julia/packages/Slepians/BIgzj/src/gpss.jl:44",
       " [3] top-level scope at ./timing.jl:174 [inlined]",
       " [4] top-level scope at ./In[2]:0",
       " [5] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
