--- a/Examples/00_DPSS.ipynb
+++ b/Examples/00_DPSS.ipynb
@@ -14,26 +14,14 @@
     "\n",
     "The dpss's solve the problem of concentrating, in frequency, the most amount of mass under the interval $(-W,W)$, while having only finite extent in time. \n",
     "\n",
-    "In Multitaper.jl, the dpss's are computed in the following way."
+    "In Slepians.jl, the dpss's are computed in the following way."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8192-element LinRange{Float64}:\n",
-       " 0.0,0.00012207,0.000244141,0.000366211,…,0.999512,0.999634,0.999756,0.999878"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Slepians, FFTW, Plots\n",
     "\n",
@@ -46,32 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-29T20:30:20.234000-05:00",
      "start_time": "2020-10-30T01:30:20.162Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: Multitaper not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: Multitaper not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[2]:4",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N     = 1024\n",
     "NW    = 4.0 \n",
     "K     = 8\n",
-    "v,lam = Multitaper.dpss_tapers(N, NW, K, :both)\n",
+    "v,lam = dpss_tapers(N, NW, K, :both)\n",
     "\n",
     "plot(-512:511, v, label = lam', xlabel = \"Index\", title = \"DPSS's sorted by concentration\")"
    ]
@@ -85,36 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-29T20:24:26.367000-05:00",
      "start_time": "2020-10-30T01:21:17.945Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: v not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: v not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] (::var\"#2#4\")(::Int64) at ./none:0",
-      " [2] MappingRF at ./reduce.jl:93 [inlined]",
-      " [3] _foldl_impl(::Base.MappingRF{var\"#2#4\",Base.MappingRF{var\"#1#3\",Base.BottomRF{typeof(hcat)}}}, ::Base._InitialValue, ::UnitRange{Int64}) at ./reduce.jl:58",
-      " [4] foldl_impl at ./reduce.jl:48 [inlined]",
-      " [5] mapfoldl_impl(::var\"#1#3\", ::typeof(hcat), ::NamedTuple{(),Tuple{}}, ::Base.Generator{UnitRange{Int64},var\"#2#4\"}) at ./reduce.jl:44",
-      " [6] mapfoldl(::Function, ::Function, ::Base.Generator{UnitRange{Int64},var\"#2#4\"}; kw::Base.Iterators.Pairs{Union{},Union{},Tuple{},NamedTuple{(),Tuple{}}}) at ./reduce.jl:160",
-      " [7] mapfoldl at ./reduce.jl:160 [inlined]",
-      " [8] #mapreduce#208 at ./reduce.jl:287 [inlined]",
-      " [9] mapreduce(::Function, ::Function, ::Base.Generator{UnitRange{Int64},var\"#2#4\"}) at ./reduce.jl:287",
-      " [10] top-level scope at In[3]:2",
-      " [11] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M        = 4*N\n",
     "U        = mapreduce(x -> fft(vcat(x,zeros(M-N))), hcat, v[:,k] for k in 1:K)\n",
