toy 2D mt example

--- a/Examples/Localization2D.ipynb
+++ b/Examples/Localization2D.ipynb
@@ -91,7 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
+   "id": "9fc8bfaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 2, 3, 1, 4, 5], [1, 2, 3, 2, 4, 2], [1 1; 2 3; … ; 9 12; 13 14])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [1, 2, 3, 1, 4, 5]\n",
+    "folding = [1, 2, 3, 2, 4, 2]\n",
+    "degamini(gamini(data,folding))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "16a22227",
    "metadata": {},
    "outputs": [
@@ -105,36 +128,36 @@
     {
      "data": {
       "text/plain": [
-       "32-element Array{Float64,1}:\n",
-       " 0.007018610009470092\n",
-       " 0.016274394730905625\n",
-       " 0.025392065309262066\n",
-       " 0.034273862913021355\n",
-       " 0.042835898022226614\n",
-       " 0.05099805926237619\n",
-       " 0.05868409347853553\n",
-       " 0.06582222277636186\n",
-       " 0.07234579410884855\n",
-       " 0.07819389578707035\n",
-       " 0.08331192422694678\n",
-       " 0.08765209300440377\n",
-       " 0.09117387869576388\n",
-       " ⋮\n",
-       " 0.08765209300440377\n",
-       " 0.08331192422694678\n",
-       " 0.07819389578707035\n",
-       " 0.07234579410884855\n",
-       " 0.06582222277636186\n",
-       " 0.05868409347853553\n",
-       " 0.05099805926237619\n",
-       " 0.042835898022226614\n",
-       " 0.034273862913021355\n",
-       " 0.025392065309262066\n",
-       " 0.016274394730905625\n",
-       " 0.007018610009470092"
+       "32×2 Array{Float64,2}:\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " ⋮    \n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +172,8 @@
     "wqx, qx = FastGaussQuadrature.gausslegendre(Nqx)\n",
     "wqy, qy = FastGaussQuadrature.gausslegendre(Nqy)\n",
     "\n",
+    "using Random\n",
+    "Random.seed!(123)\n",
     "x, y = blob(1,1)\n",
     "thph = hcat(y[1], x[1]) \n",
     "Nth = Int64(floor(rand(1)[1]*300))\n",
@@ -157,29 +182,33 @@
     "# For each of these points in y find the appropriate ranges of x's\n",
     "# xints, yp, xp, forreal = phicurve(thph, qy) # Line 128 of Localization2D.m\n",
     "th = qy\n",
-    "# end"
+    "# end\n",
+    "\n",
+    "using DelimitedFiles\n",
+    "writedlm(\"testphint_thph.txt\", thph, \",\")\n",
+    "writedlm(\"testphint_th.txt\", th, \",\")\n",
+    "\n",
+    "phint_matlab = readdlm(\"phint.txt\", ',')\n",
+    "thp_matlab = readdlm(\"thp.txt\", ',')\n",
+    "php_matlab = readdlm(\"php.txt\", ',')\n",
+    "forreal_matlab = readdlm(\"forreal.txt\", ',')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "83621639",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mDimensionMismatch(\"tried to assign 3584 elements to 112 destinations\")\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mDimensionMismatch(\"tried to assign 3584 elements to 112 destinations\")\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] throw_setindex_mismatch(::Array{Float64,2}, ::Tuple{Int64}) at ./indices.jl:191",
-      " [2] setindex_shape_check at ./indices.jl:239 [inlined]",
-      " [3] setindex!(::Array{Float64,2}, ::Array{Float64,2}, ::Array{Int64,1}) at ./array.jl:854",
-      " [4] top-level scope at In[57]:57",
-      " [5] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/plain": [
+       "([0.0 0.0; 0.0 0.0; … ; 0.0 0.0; 0.0 0.0], [0.007018610009470092 0.016274394730905625 … 0.016274394730905625 0.007018610009470092; 0.007018610009470092 0.016274394730905625 … 0.016274394730905625 0.007018610009470092], [NaN NaN … NaN NaN; NaN NaN … NaN NaN], CartesianIndex{2}[])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -218,7 +247,7 @@
     "    colx2 = colx .- (dsx[colr] == -2) .+ (dsx[colr] == 2)\n",
     "    L = length(colx)\n",
     "    (L%2 == 1) && error(\"Cannot find pairs of crossings.\")\n",
-    "    phint = zeros(length(th), L)\n",
+    "    phint = zeros(L)\n",
     "    # Then one point was exactly hit, this is the thN or the thS case\n",
     "    if length(colx) == 2 && colx == colx2\n",
     "        phint = thph[hcat(colx[2], colx2[2]), 2]\n",
@@ -238,19 +267,131 @@
     "    rowj = colj\n",
     "    colj = matranges(Int64.(reshape(hcat(ones(length(b)), b)', length(b)*2, 1)))\n",
     "    pint = repeat([NaN], length(th), maximum(b))\n",
-    "    subsi = (colj .- 1) .* length(th) .+ rowj\n",
+    "    subsi = (colj .- 1) .* length(th) .+ rowj # Linear index\n",
     "    pint[subsi] = phint\n",
     "    wt, thp = (length(b) == length(th)) ? (0, reshape(gamini(th, b), (2, Int64(length(phint)/2)))) : (1, [])\n",
     "    # Need to sort since contour may be given in any order\n",
     "    phint = sort(pint, dims = 2)\n",
     "    php = (wt == 0) ? reshape(phint[subsi], (2, Int64(length(colj)/2))) : [] # line 95\n",
     "    # Make them zero so the integral doesn't do anything\n",
-    "    forreal = map(x -> !isnan(x), phint)\n",
-    "    phint[!forreal] .= 0.0\n",
+    "    forreal = findall(x -> !isnan(x), phint)\n",
+    "    phint[findall(isnan, phint)] .= 0.0\n",
     "    # note: can use (demo2)\n",
     "    # x,y=blob(1,1); thph=hcat(y[:],x[:]); Nth = ceil(rand*300); th=LinRange(minimum(thph[:,1]), maximum(thph[:,1]), Nth)\n",
     "    return phint, thp, php, forreal\n",
     "#end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e1d794e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length(colx) == 2 && colx == colx2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "3723bb1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mDimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(32), Base.OneTo(2)), b has dims (Base.OneTo(0),), mismatch at 1\")\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mDimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(32), Base.OneTo(2)), b has dims (Base.OneTo(0),), mismatch at 1\")\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] promote_shape at ./indices.jl:178 [inlined]",
+      " [2] promote_shape at ./indices.jl:169 [inlined]",
+      " [3] -(::Array{Float64,2}, ::Array{CartesianIndex{2},1}) at ./arraymath.jl:38",
+      " [4] isapprox(::Array{Float64,2}, ::Array{CartesianIndex{2},1}; atol::Int64, rtol::Float64, nans::Bool, norm::typeof(LinearAlgebra.norm)) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/generic.jl:1635",
+      " [5] isapprox(::Array{Float64,2}, ::Array{CartesianIndex{2},1}) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/generic.jl:1635",
+      " [6] top-level scope at In[59]:1",
+      " [7] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
+   "source": [
+    "forreal_matlab ≈ forreal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "65c2cc26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "php_matlab ≈ php"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7525ec2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thp_matlab ≈ thp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b5b18b7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.0 0.0; 0.0 0.0; … ; 0.0 0.0; 0.0 0.0], [-1.312949931431483 1.540448886346207; -1.310781785536589 1.545135108224483; … ; -1.310781785536589 1.545135108224483; -1.312949931431483 1.540448886346207])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phint, phint_matlab"
    ]
   },
   {
