--- a/Examples/get_octagonal_slep.ipynb
+++ b/Examples/get_octagonal_slep.ipynb
@@ -48,23 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ab88d878",
    "metadata": {},
    "outputs": [],
    "source": [
     "M = 4; Kp = 10.0; szs = (16,16,16)\n",
-    "int = (101, 101, 101)\n",
+    "int = (51, 51, 51)\n",
     "nowtv = [FastGaussQuadrature.gausslegendre(nj) for nj in szs]\n",
     "\n",
-    "lbfun(x) = (x>=0)*max(-sqrt(2)+x, -1) + (x<0)*max(-sqrt(2)-x,-1)\n",
+    "lbfun(x) = (x >= 0) * max(-sqrt(2) + x, -1) + (x < 0) * max(-sqrt(2) - x, -1)\n",
     "\n",
-    "no    = [(x, lbfun(x)*y, z) for x in nowtv[1][1] for y in nowtv[2][1] for z in nowtv[3][1]];"
+    "no    = [(x, lbfun(x)*y, z) for x in nowtv[1][1] for y in nowtv[2][1] for z in nowtv[3][1]];\n",
+    "\n",
+    "using Profile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b45e5975",
    "metadata": {},
    "outputs": [],
@@ -74,19 +76,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e108a13b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: profiler attempt to access an invalid memory location\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the Slepians on this basis\n",
-    "@time s, sleps = customsleps(M, Kp, szs, no = no, sqwt = givewts(nowtv), int = int, exact = false);"
+    "lvl = 6\n",
+    "maxrank = 128\n",
+    "@time s, sleps = customsleps(M, Kp, szs, no = no, sqwt = givewts(nowtv), int = int, \n",
+    "    exact = false, lvl = lvl, maxrank = maxrank);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "107a756e",
+   "execution_count": 11,
+   "id": "05b3303e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +110,8 @@
     "h5open(\"slep100.h5\", \"w\") do file\n",
     "    write(file, \"s\", s)  \n",
     "    write(file, \"M\", M)  \n",
+    "    write(file, \"Kp\", Kp)\n",
+    "    write(file, \"szs\", szs)\n",
     "    for i in 1:M\n",
     "        write(file, \"slep$i\", sleps[i])\n",
     "    end\n",
@@ -105,8 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07c1d62d",
+   "execution_count": 6,
+   "id": "466ffbe2",
    "metadata": {},
    "outputs": [],
    "source": [
