Localization3D integration draft ready

--- a/Examples/Localization2D.ipynb
+++ b/Examples/Localization2D.ipynb
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "242af34b",
+   "id": "990a53b9",
    "metadata": {},
    "source": [
     "## Integrate\n",
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cb654191",
+   "id": "70e6949f",
    "metadata": {},
    "outputs": [
     {
@@ -801,34 +801,13 @@
     }
    ],
    "source": [
-    "# Run the custom slepians - small modifications made to the main code:\n",
-    "# https://github.com/lootie/Slepians.jl/blob/master/src/dDimSleps.jl\n",
-    "\n",
-    "function customsleps_ext(M::Int64, Kp, szs; prec = 1.0e-8, exact = false, lvl = 6, maxrank = 0, \n",
-    "    no = nothing, sqwt = nothing, int = nothing, ev = nothing)\n",
-    "    # Create the kernel matrix, exactly or via HODLR approximation:\n",
-    "    _K    = KernelMatrix(no, no, Kp, dfn)\n",
-    "    K     = exact ? full(_K) : RHMatrix.rhodlr(_K, lvl, prec, maxrank)\n",
-    "\n",
-    "    # Solve the eigenvalue problem (86) to obtain the slepians at the quad nodes:\n",
-    "     s     = eigsolve(z -> sqwt .* (K * (sqwt .* z)), length(sqwt), M, :LM, \n",
-    "                        issymmetric = true)\n",
-    "    outputsize = (int == nothing) ? szs : int\n",
-    "    # Prepare even grid points, compute Slepians at those points:\n",
-    "    evpts = (ev != nothing) ? ev : vec(collect(product([range(-1.0, 1.0, length = s) for s in outputsize]...)))\n",
-    "\n",
-    "    _K2   = KernelMatrix(evpts, no, Kp, dfn)\n",
-    "    K2    = exact ? full(_K2) : RHMatrix.rhodlr(_K2, lvl, prec, maxrank)\n",
-    "    sleps = [(K2 * (sqwt .* x[2])) ./ x[1] for x in zip(s[1], s[2])]\n",
-    "    sl = [reshape(sp, (16, 16)...) for sp in sleps];\n",
-    "    return s[1], [reshape(sp, outputsize...) for sp in sleps]\n",
-    "end"
+    "include(\"ext.jl\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ea46405f",
+   "id": "7cc130f4",
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a9e8482a",
+   "id": "789b0ee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9bfe87d",
+   "id": "8f5f7b0c",
    "metadata": {},
    "source": [
     "Get the nodes and weights into the sizes and shapes that the solving routine wants."
@@ -876,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e629bfa9",
+   "id": "9b6b5387",
    "metadata": {
     "scrolled": true
    },
@@ -889,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76acc0a0",
+   "id": "db376e8e",
    "metadata": {},
    "source": [
     "Plot the results"
@@ -898,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4a4c5657",
+   "id": "69e91591",
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1818,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "121b43c0",
+   "id": "93020659",
    "metadata": {},
    "outputs": [
     {
@@ -3450,7 +3429,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "870f4c74",
+   "id": "8ba78b05",
    "metadata": {},
    "outputs": [
     {
@@ -3473,7 +3452,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1a9ea4d2",
+   "id": "6ba958f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4364,7 +4343,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2842d5c8",
+   "id": "cc206344",
    "metadata": {},
    "outputs": [
     {
@@ -5207,7 +5186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b7eb6b5",
+   "id": "816ec003",
    "metadata": {},
    "outputs": [],
    "source": []
