--- a/Examples/00_DPSS.ipynb
+++ b/Examples/00_DPSS.ipynb
@@ -19,9 +19,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Slepians [97caf2bd-9cc0-4738-8821-c8999f46f3c9]\n",
+      "└ @ Base loading.jl:1278\n",
+      "┌ Warning: Package Slepians does not have Statistics in its dependencies:\n",
+      "│ - If you have Slepians checked out for development and have\n",
+      "│   added Statistics as a dependency but haven't updated your primary\n",
+      "│   environment's manifest file, try `Pkg.resolve()`.\n",
+      "│ - Otherwise you may need to report an issue with Slepians\n",
+      "└ Loading Statistics into Slepians from project dependency, future warnings for Slepians are suppressed.\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mInterruptException:\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mInterruptException:\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] _include_from_serialized(::String, ::Array{Any,1}) at ./loading.jl:681",
+      " [2] _require_search_from_serialized(::Base.PkgId, ::String) at ./loading.jl:782",
+      " [3] _tryrequire_from_serialized(::Base.PkgId, ::UInt64, ::String) at ./loading.jl:712",
+      " [4] _require_search_from_serialized(::Base.PkgId, ::String) at ./loading.jl:771",
+      " [5] _tryrequire_from_serialized(::Base.PkgId, ::UInt64, ::Nothing) at ./loading.jl:712",
+      " [6] _require_from_serialized(::String) at ./loading.jl:744",
+      " [7] _require(::Base.PkgId) at ./loading.jl:1040",
+      " [8] require(::Base.PkgId) at ./loading.jl:928",
+      " [9] require(::Module, ::Symbol) at ./loading.jl:923",
+      " [10] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
    "source": [
     "using Slepians, FFTW, Plots\n",
     "\n",
@@ -34,14 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-29T20:30:20.234000-05:00",
      "start_time": "2020-10-30T01:30:20.162Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: dpss_tapers not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: dpss_tapers not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[2]:4",
+      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
    "source": [
     "N     = 1024\n",
     "NW    = 4.0 \n",
@@ -60,14 +108,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-29T20:24:26.367000-05:00",
      "start_time": "2020-10-30T01:21:17.945Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: v not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: v not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] (::var\"#2#4\")(::Int64) at ./none:0",
+      " [2] MappingRF at ./reduce.jl:93 [inlined]",
+      " [3] _foldl_impl(::Base.MappingRF{var\"#2#4\",Base.MappingRF{var\"#1#3\",Base.BottomRF{typeof(hcat)}}}, ::Base._InitialValue, ::UnitRange{Int64}) at ./reduce.jl:58",
+      " [4] foldl_impl at ./reduce.jl:48 [inlined]",
+      " [5] mapfoldl_impl(::var\"#1#3\", ::typeof(hcat), ::NamedTuple{(),Tuple{}}, ::Base.Generator{UnitRange{Int64},var\"#2#4\"}) at ./reduce.jl:44",
+      " [6] mapfoldl(::Function, ::Function, ::Base.Generator{UnitRange{Int64},var\"#2#4\"}; kw::Base.Iterators.Pairs{Union{},Union{},Tuple{},NamedTuple{(),Tuple{}}}) at ./reduce.jl:160",
+      " [7] mapfoldl at ./reduce.jl:160 [inlined]",
+      " [8] #mapreduce#208 at ./reduce.jl:287 [inlined]",
+      " [9] mapreduce(::Function, ::Function, ::Base.Generator{UnitRange{Int64},var\"#2#4\"}) at ./reduce.jl:287",
+      " [10] top-level scope at In[3]:2",
+      " [11] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
    "source": [
     "M        = 4*N\n",
     "U        = mapreduce(x -> fft(vcat(x,zeros(M-N))), hcat, v[:,k] for k in 1:K)\n",
