randcirc instead of randcirc2 in blob

--- a/Examples/Localization2D.ipynb
+++ b/Examples/Localization2D.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "dab60bd6",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module RHMatrix.\n"
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Slepians [97caf2bd-9cc0-4738-8821-c8999f46f3c9]\n"
      ]
     },
     {
@@ -31,7 +31,7 @@
        "Main.RHMatrix"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,25 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "56f6faea-e2ce-43c9-aaa6-cc47a91d2d2c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: `scatter` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `scatter` not defined",
-      "",
-      "Stacktrace:",
-      " [1] randcirc2(xm::Float64, ym::Float64, r::Float64, dr::Int64, N::Int64)",
-      "   @ Slepians ~/.julia/packages/Slepians/bo3uz/src/relevant_slepian_alpha.jl:190",
-      " [2] top-level scope",
-      "   @ In[5]:40"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" \n",
     "\n",
@@ -117,7 +102,7 @@
     "\n",
     "x,y = Slepians.randcirc2(0.0,0.0,1.0,1,4)\n",
     "\n",
-    "scatter(x,y)"
+    "plot(x,y)"
    ]
   },
   {
